--- a/src/content/articals/artical1.mdx
+++ b/src/content/articals/artical1.mdx
@@ -1,14 +1,17 @@
 ---
-title: Hello, World
+title: 文章1
+desc: 测试文章1
+date: 2024-7-13
+tags: [测试标签]
 ---
 
-# Hi there!
+# 标题一
 
-This Markdown file creates a page at `your-domain.com/page-1/`
+直接用 md 文件生成的 html 页面
 
-It probably isn't styled much, but Markdown does support:
+使用 md 的格式编写文章即可有对应样式：
 
-- **bold** and _italics._
-- lists
-- [links](https://astro.build)
-- and more!
+- **加粗** 和 _斜体_
+- 左边的点就是列表样式
+- [奇怪的链接](https://www.baidu.com)
+- 巴拉巴拉
