feat: 完善文章页

--- a/src/content/articals/artical1.mdx
+++ b/src/content/articals/artical1.mdx
@@ -1,7 +1,9 @@
 ---
+layout: ../../layouts/ArticalLayout.astro
 title: 文章1
 desc: 测试文章1
 date: 2024-7-13
+cover: https://astroship-pro.web3templates.com/_astro/photo-1630673559640-000a51b4dd28_1yxL8K.avif
 tags: [测试标签]
 ---
 
