--- a/src/content/articals/artical2.mdx
+++ b/src/content/articals/artical2.mdx
@@ -2,7 +2,7 @@
 layout: ../../layouts/ArticalLayout.astro
 title: 文章2
 desc: 测试文章2
-date: 2024-7-16
+date: 2024-7-16 12:25:34
 cover: https://astroship-pro.web3templates.com/_astro/photo-1630673559640-000a51b4dd28_1yxL8K.avif
 tags: [健身, 运动]
 ---
