--- a/src/content/articals/artical1.mdx
+++ b/src/content/articals/artical1.mdx
@@ -2,7 +2,7 @@
 layout: ../../layouts/ArticalLayout.astro
 title: 文章1
 desc: 测试文章1
-date: 2024-7-13 16:37:54
+date: '2024-7-13 16:37:54'
 cover: https://astroship-pro.web3templates.com/_astro/photo-1630673559640-000a51b4dd28_1yxL8K.avif
 tags: [测试标签]
 ---
